--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -1881,10 +1881,23 @@ text-align: center !important;
 padding-bottom: 1% !important;
 }
 .techer{
-  background-color: #191a20 !important;
+  background-color:white;
+  border-radius: 20px;
+  padding: 34px 65px 45px 65px;
 }
 .border{
   border: 1px solid black;
 	padding: 34px 65px 45px 65px;
   
+}
+.label{
+  text-align:center;
+}
+.label h5{
+  padding-bottom: 1%;
+}
+.techer-container{
+  display: flex;
+    justify-content: center;
+    align-items: center;
 }
