--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -11,7 +11,7 @@
 
 	/* SIZES */
 	--max-width: 758px;
-	--max-height: 550px;
+	/* --max-height: 600px !important; */
 
 	font-size: 16px;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -210,4 +210,9 @@ body {
 		opacity: 1;
 		z-index: 5;
 	}
+}
+
+.grad{
+	display: flex;
+	flex-direction: row;
 }
