--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -289,7 +289,7 @@ header
 }
 
 .header-area .main-nav .logo {
-  line-height: 100px;
+  /* line-height: 100px; */
   color: #fff;
   font-size: 28px;
   font-weight: 700;
@@ -302,9 +302,9 @@ header
   transition: all 0.3s ease 0s;
 }
 
-.background-header .main-nav .logo {
+/* .background-header .main-nav .logo {
   line-height: 75px;
-}
+} */
 
 .background-header .nav {
   margin-top: 20px !important;
